_resources/style.css
/* ----------------------------------------------
	Template Name : Colourise
	Template Code : S-0022
	Version : 1.1   
	Author : Erwin Aligam, edited by Erich Gubler
	Author URI : http://www.styleshout.com/       
	Last Date Modified :  January 17, 2010
 ------------------------------------------------ */
 
/* ----------------------------------------------
   HTML ELEMENTS
------------------------------------------------- */ 

/* Top Elements */
* {
	margin: 0;
	padding: 0;
	outline: 0;
}

html, body {
	height: 100%;
}

body {
	font: 15px 'Georgia', Serif;
	color: #aeaeae; 
	background: #000 url(bg.jpg) no-repeat;
	background-position: center center;
	background-attachment: fixed;
	background-size: cover;
}

p, dl { 
	padding: .5em;
	margin: 0;
	line-height: 120%;
}

ul, ol { padding: 0 2.2em; }

ul li, ol li { padding: .5em }

/* Links */
a, a:active, a:link {
	text-decoration: none;
	color: #006193;			
}
a:visited {
	text-decoration: none;
}
a:hover {
	color: #fff;
	border-bottom: 1px dotted #438800;
}

/* headers */
h1, h2, h3 {
	font-family: 'Georgia', Serif;
	color: #bc0000;
	padding: 1em 1em .25em 1em;	
}
h1 {
	font-size: 3.6em; 
}
h2 {
	font-size: 2.2em;
}
h3 {
	font-size: 1.8em;
	font-weight: normal;
}

header #title,#subtitle {
	text-align: center;
}

header #subtitle {
	padding: 0 0 2em 0;	
}

/* header search */
header form#quick-search {
	position: absolute;
	top: 50px; right: 0;
	padding: 0; margin: 0;
	border: none;
	width: 262px; height: 30px;
	background: url(header-search.jpg) no-repeat;	
	z-index: 999999;
}
header form#quick-search p {
	margin: 0; padding: 0;		
}
header form#quick-search .tbox {
	margin: 2px 0 0 5px; 
	width: 210px;
	background: none;
	border: none;
}
header form#quick-search label,
header form#quick-search .btn {
	display: none;	
}

code {

  	margin: 5px 0;
  	padding: 15px;
  	text-align: left;
  	display: block;
  	overflow: auto;  
  	font: 1em Monospace;
  	/* white-space: pre; */
  	background: #222;  
}
pre > code {
  	display: block;
}

p > code {
  	padding: 5px;
  	display: inline;
}

p img {
	display: block;
	margin: auto;
	padding: .5em 0em;
}

iframe { /* Almost certainly a video/media embed */
	width: 640px;
	display: block;
	height: 480px;
	margin: .5em auto;
}

blockquote {
	margin: .5em;
 	padding: 1em;  
   	background: #222 url(quote.png) no-repeat 1em 1em;
	background-size: 50px;
	font-weight: normal;
	font-size: 18px;
	line-height: 150%;
	font-style: italic;
	font-family: Georgia, 'Times New Roman', Times, serif;	
	color: #808080;	
}

blockquote .blockquote_source:before {
	content: "\2014";
}

blockquote .blockquote_source {
	font-style: normal;
	white-space: pre;
	text-align: right;
}

/* Footer */

footer {
	height: 155px;
	text-align: center;
	padding: .8em .5em .8em;
	width: 100%;
	background-color: #000;
}


/* search form */
.searchform {
	background-color: transparent;
	border: none;	
	margin: 0; padding: 20px 0 15px 8px;	
	width: 270px;	
}
.searchform p { margin: 0; padding: 0 0 10px 0; }
.searchform input.textbox { 
	width: 185px;
	height: 18px;
	padding: 2px;	
	vertical-align: top;
}
.searchform input.button { 
	width: 60px;
	height: 24px;
	padding: 2px 5px;
	vertical-align: top;
}

/* ------------------------------------------
   LAYOUT
------------------------------------------- */ 
#wrap {
	min-height: 100%;
	width: 900px;	
	margin: 0 auto 2em;
	padding: 2em 1em 0em;
	text-align: left;
	background-color: rgba(0,0,0,0.5);		
}
#content-wrap {
	position: relative;
	clear: both;
	padding: 2em; 		
	margin-left: 5px;	
	background: transparent;
	float: left;	
	display: inline;
}

#content-header {
	background-color: #222;
}

#content-body {
	padding: 1em 1em 0em;
}

/*  Navigation  */

	/* Automagically-generated pages */
#nav {
	height: 1em;
	width: 100%;
	position: fixed;
	background-color: #222;
	text-align: left;
	padding: .8em .5em .8em;
	z-index: 2;
}

#nav-content {
	width: 900px;
	margin: 0 auto;
}

#nav-content ul {
	list-style: none;
	padding: 0;
	margin: 0;
}

#nav-content ul li {
	display: inline;
}

#nav-content ul li#home a {
	color: #FFF;
}

#nav-content ul li a {
	text-decoration: none;	
	color: #999;
	padding: 0 1em 0 0;
}
#nav-content ul li#current a {	
	color: #FFF;	
}

#nav-content a:hover, 
#nav-content a:active {
	color: #FFF;
	background: none;
	border: none;
	text-decoration: underline;
}

	/* Localization */

#lang {
	float: right;
	padding: 0 1em 0 0;
	list-style: none;
	display: inline;
}

#lang a {
	text-decoration: none;	
	color: #999;	
	padding: 0 0 0 1em;
}

#lang a#current {
	color: #FFF;	
}

/* Post-specific elements */

#disqus_thread {
	padding: 2em;
}

#post-info {
	text-align: center;
	width: 100%;
}

.post-footer-separator {
	height: 0px;
	margin: 1em;
	border: .2em solid #222;
	border-radius: .2em / .2em;
}

#other-posts table {
	width: 100%;
}

#other-posts h2 {
	font-style: normal;
	text-align: center;
	padding: 0em 2em;
}

#other-posts table td#previous-post,
#other-posts table td#next-post {
	width: 50%;
}

#other-posts table td#previous-post h3,
#other-posts table td#next-post h3 {
	margin: 0;
	padding: 0;
}

#other-posts table td#previous-post {
	text-align: left;
}

#other-posts table td#next-post {
	text-align: right;
}

/* Post indexes */
table#post-index {
	width: 100%;
	text-align: center;
}
table#post-index tr.category,
table#post-index tr td.name {
	text-align: left;
}

table#post-index tr td.date,
table#post-index tr td.tags {
	width: 30%;
}

